fix: form text align

--- a/app/themes/hunger-tv/assets/styles/components/form.scss
+++ b/app/themes/hunger-tv/assets/styles/components/form.scss
@@ -11,7 +11,7 @@
 }
 
 @media (min-width: $md-min) {
-	.form--signup .row:last-child .col:last-child {
+	.footer .form--signup .row:last-child .col:last-child {
 		text-align: right;
 	}
 }
